--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "release:mac": "tauri build --bundles dmg",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "vitest",
     "start": "vite"
   },
   "dependencies": {
@@ -55,6 +56,7 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.1.0"
+    "vite": "^7.1.0",
+    "vitest": "^1.6.0"
   }
 }
