--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.539.0",
     "marked": "^16.1.2",
+    "dompurify": "^3.1.4",
     "monaco-editor": "^0.52.2",
     "node-pty": "^1.0.0",
     "postcss": "^8.5.6",
