Fix: wrap model registry in Mutex and add icon.png for Tauri

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,8 @@ Thumbs.db
 repos/.gemini-config
 repos/**/.env
 
+# Embedded external repos (ignore entire directory)
+repos/
+
 # Checkpoints
 .checkpoints/
