--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@openai/codex-sdk": "^0.45.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -30,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "diff": "^5.2.0",
     "dompurify": "^3.2.6",
     "lucide-react": "^0.539.0",
     "marked": "^16.1.2",
@@ -45,6 +47,7 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tauri-apps/cli": "^2.7.1",
+    "@types/diff": "^7.0.2",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
