--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,10 @@ chrono = { version = "0.4", features = ["serde"] }
 libc = "0.2"
 base64 = "0.22.1"
 dirs = "5.0"
-codex-protocol = { path = "../vendors/codex/codex-rs/protocol" }
 uuid = { version = "1", features = ["v4"] }
-shlex = "1.3"
+portpicker = "0.1"
+reqwest = { version = "0.12", features = ["blocking", "json"] }
+tempfile = "3.10"
+which = "4.4"
+tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }
+url = "2.5"
